keyboard squish fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ body {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	height: 100dvh;
+	min-height: 100dvh;
 	overflow-x: hidden;
 }
 
